--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header>
         <h1>My Portfolio</h1>
+        <button class="toggle-button">Menu</button>
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
