file type updated

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         sunt natus voluptate fugit ducimus esse</p>
                 </div>
                 <div class="about-container-right">
-                    <img src="assets/images/shiv.jpg" alt="Shiv Yadav, headshot">
+                    <img src="assets/images/shiv.JPG" alt="Shiv Yadav, headshot">
                 </div>
             </div>
         </div>
